Daily/manifests/daily-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daily
  namespace: tutorial
  labels:
    app: daily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daily
  template:
    metadata:
      labels:
        app: daily
    spec:
      containers:
        - name: daily
          image: hispres.azurecr.io/daily:v1
          ports:
            - containerPort: 8080
