Daily/manifests/daily-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Daily
  labels:
    app: Daily
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Daily
